--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "init": "^0.1.2",
     "mysql": "^2.18.1",
     "node": "^15.10.0",
     "nodemon": "^2.0.7",
@@ -22,4 +22,3 @@
     "react-scripts": "latest"
   }
 }
-
